# coffee-swap-protocol

./: Cargo.toml  README.md
.circleci/: config.yml
contracts/coffee-shop/: Cargo.toml
contracts/coffee-shop/examples/: schema.rs
contracts/coffee-shop/src/: coffee_state.rs  contract.rs  error.rs  integration.rs  lib.rs  msg.rs  products.rs  state.rs
contracts/shop/: Cargo.toml
contracts/shop/examples/: schema.rs
contracts/shop/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/shop/src/: coffee_state.rs  contract.rs  error.rs  integration.rs  lib.rs  msg.rs  products.rs  token.rs
