[workspace]
members = ["contracts/*"]
# members = ["packages/*", "contracts/*"]

[profile.release.package.cw20-base]
codegen-units = 1
incremental = false

[profile.release.package.cw20-staking]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
