[package]
name = "coffee-shop"
version = "0.1.0"
authors = ["IvanPavlov <ip@atticlab.net>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-storage-plus = { version = "0.10.0-soon" }
cosmwasm-std = { version = "1.0.0-soon" }
cw2 = "0.10.0-soon"
cw20 = { version = "0.10.0-soon" }
cw20-base = { version = "0.10.0-soon", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cw-multi-test = "0.10.0-soon"
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-vm = { version = "0.16.0", default-features = false, features = ["iterator"] }
#cw-multi-test = "0.9.0"
#terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git", branch = "main"}
